运行状态从字符串自动加载

--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -285,7 +285,7 @@ function createArr(){
 	for(var x=0;x<parseInt(randomNumber(orderNums));x++){
 		dealIndex();
 	}
-	console.log(dataSecond)
+	// console.log(dataSecond)
 } 
 function dealIndex(){
 	var x=parseInt(59*Math.random());
