--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -200,7 +200,7 @@
                                         <h3>设备状态</h3>
                                     </div>
                                     <div class="l-mid-header">
-                                        <div class="item1">
+<!--                                        <div class="item1">
                                             <h5>设备总数：</h5>
                                             <span class="data" id="lab_center_id_left_4">611</span>
                                         </div>
@@ -218,9 +218,10 @@
                                                 <div class="progress-bar" role="progressbar"></div>
                                             </div>
                                             <span class="data">97.5%</span>
-                                        </div>
+                                        </div>-->
                                     </div>
                                     <div class="l-mid-body" id="center_lab_center_div">
+<!--
                                         <div class="l-mid-body-1"><h4>制冷器具性能室</h4>
                                             <div class="item">
                                                 <h5>设备数：</h5>
@@ -321,6 +322,7 @@
                                                 <span class="data">100%</span>
                                             </div>
                                         </div>
+-->
                                     </div>
                                 </div>
                                 <!--第三行-->
@@ -329,7 +331,7 @@
                                         <h3>订单状态</h3>
                                     </div>
                                     <div class="l-bottom-header">
-                                        <div class="item">
+<!--                                        <div class="item">
                                             <h5>已测订单数：</h5>
                                             <span class="data">18546</span>
                                         </div>
@@ -344,9 +346,10 @@
                                         <div class="item">
                                             <h5>及时率：</h5>
                                             <span class="data">98.1%</span>
-                                        </div>
+                                        </div>-->
                                     </div>
                                     <div class="l-bottom-body" id="center_lab_bottom_div">
+<!--
                                         <div class="l-bottom-body-1"><h4>制冷器具性能室</h4>
                                             <div class="item">
                                                 <h5>已测订单数：</h5>
@@ -422,6 +425,7 @@
                                                 <h5>及时率：</h5><span class="data"><strong>99.7%</strong></span>
                                             </div>
                                         </div>
+-->
 
                                     </div>
                                 </div>
