若干样式小问题

--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -34,10 +34,8 @@
             <header>
                 <div class="close">×</div>
                 <ul class="title">
-                    <li>实验室编号：<span id="center_sybh_id_world"></span></li>
-                    <li>Sample code：<span id="center_ypbm_id_world"></span></li>
                     <li>型号：<span id="center_cpxh_id_world"></span></li>
-                    <li>测试项目：<span id="center_testPro_id_world"></span></li>
+                    <li>实验项目：？？？<span id="center_sybh_id_world"></span></li>
                 </ul>
                 <ul class="btnGroup">
                     <li class="active">
