--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -8,41 +8,46 @@
     <link rel="stylesheet" href="${contextPath!}/static/css/hallMap.css">
 </head>
 <body id="hallMap">
-<header>
-    <span class="mainLogo"></span>
-    <h1><a href="">全球实验室</a></h1>
-    <h1>Haier Global Labs</h1>
-</header>
-<div id="container">
-    <div class="mapBox">
-        <iframe id="iframeFlat" src="${contextPath!}/lab/flatMap" frameborder="0"></iframe>
-    </div>
-    <div class="textBox">
-        <div class="text">
-            海尔全球拥有624个实验室，分布在10大研发中心和24个工业园区的108个工厂，具备10个整机专业领域和10大类模块的检测能力，并获得UL/VDE/ TUV等28个国际权威机构授权、数据互认，可提供全球市场准入认证测试。
+<div id="myContainer">
+    <header>
+        <span class="mainLogo"></span>
+        <h1><a href="">全球实验室</a></h1>
+        <h1>Haier Global Labs</h1>
+    </header>
+    <div id="container">
+        <div class="mapBox">
+            <iframe id="iframeFlat" src="${contextPath!}/lab/flatMap" frameborder="0"></iframe>
+        </div>
+        <div class="textBox">
+            <div class="text">
+                海尔全球拥有624个实验室，分布在10大研发中心和24个工业园区的108个工厂，具备10个整机专业领域和10大类模块的检测能力，并获得UL/VDE/
+                TUV等28个国际权威机构授权、数据互认，可提供全球市场准入认证测试。
+            </div>
         </div>
     </div>
+
 </div>
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
 <!--<script src="${contextPath!}/static/js/main_left.js"></script>-->
 <script>
-    var pageH = $(window).height();
-    var pageW = $(window).width();
-    var bodyScale = pageW / 1366;
-    var htmlFontSize = bodyScale * 100 + "%";
+    let [pageH, pageW] = [$(window).height(), $(window).width()];
+    let bodyScale = pageH / 637;
+    let htmlFontSize = bodyScale * 100 + "%";
     pageResize();
+    // window.onresize = pageResize;
     function pageResize() {
-        $("html").css("font-size", htmlFontSize).css("height",pageW * 768 / 1366);
-
-        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:"+pageW+" \nbody字号：" + htmlFontSize)
+        $("html").css("font-size", htmlFontSize);
+        $("#myContainer").css("width", pageH * 16 / 9)
+        console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:" + pageW + " \nbody字号：" + htmlFontSize)
     }
 
-    function parentMethod(){//平面地图的数据加载
+    function parentMethod() {//平面地图的数据加载
         var bodyScale = 1;
         // productCode, labType
         $("#iframeFlat")[0].contentWindow.createArrData("21,22,23,24,25,26,27,21,22,23,24,25,26,27", "2,1,4,3,2,1,4,3");
         // reloadLeftData();
     }
+
     function a() {
         var tt = getGeoArr(data);
         console.log(tt);
