--- a/src/main/webapp/static/css/cover.css
+++ b/src/main/webapp/static/css/cover.css
@@ -208,6 +208,11 @@
     border-radius: .5em;
     transition: width 1s;
 }
+#cover table tr .fill{
+    background-color: #6cf;
+}
+
+/*
 #cover table tr:nth-of-type(1) .fill{
     background-color: #6cf;
 }
@@ -232,6 +237,7 @@
 #cover table tr:nth-of-type(8) .fill{
     background-color: #fff566;
 }
+*/
 
 
 
