--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 
-html, body {
+html, body,#myContainer {
     height: 100%;
 }
 
@@ -18,7 +18,10 @@ body {
     background: url("../../static/img/bg-2.jpg") no-repeat;
     background-size: cover;
 }
-
+#myContainer {
+    position: relative;
+    margin: 0 auto;
+}
 header {
     position: relative;
     height: 6.5rem;
@@ -41,7 +44,7 @@ h1 {
 
 h1:nth-of-type(1) {
     margin: 0 auto;
-    padding: .5% 0 .3% 11%;
+    padding: .5% 0 .3% 12%;
     letter-spacing: 1rem;
 }
 
@@ -54,10 +57,10 @@ h1:nth-of-type(2) {
 header .mainLogo {
     display: inline-block;
     position: absolute;
-    width: 6.6%;
-    height: 43%;
-    top: 12.8%;
-    left: 36.6%;
+    width: 6rem;
+    height: 3rem;
+    top: 1rem;
+    left: 24rem;
     background: url(../img/logo_haier.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -87,12 +90,12 @@ header .mainLogo {
 }
 
 .text {
-    margin: 6rem 2rem 0 1rem;
+    margin: 3rem 2rem 0 0;
     padding: 2rem 1rem;
     border: .125rem solid var(--themeColor);
     line-height: 2rem;
-    font-size: 1.25rem;
-    letter-spacing: .25rem;
+    font-size: 1.125rem;
+    letter-spacing: .125rem;
     box-shadow: inset 0 0 2rem 0.25rem rgba(102, 204, 255,.2);
 
 }
