若干小问题修改

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -10,7 +10,10 @@
     ##}else{
     <div class="lab" style="display: none;">
         ##}
-
+        <div class="btn-back">
+            <span class="icon"></span>
+            <!--<span>返回总状态</span>-->
+        </div>
         <!--頂部標題-->
         <div class="lab_head">
             <h2 id="labName_world">检测中心数据中心</h2>
