--- a/src/main/webapp/WEB-INF/pages/layout/left180508.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left180508.html
@@ -162,7 +162,7 @@
                     </div>
                 </div>
                 <!--平面地图下面的导航-->
-                <div class="flat-footer controlBar" style="z-index:9999">
+<!--                <div class="flat-footer controlBar" style="z-index:9999">
                     <div class="legend">
                         <div class="legend-l navSwitch">产线</div>
                         <div class="legend-r navSwitch">实验室</div>
@@ -183,11 +183,11 @@
                                     <li class="active" code="${type.id!}"><a><span class="icon"></span>${type.name!}</a>
                                     </li>
                                     ##}
-                                    <!--<li  ><a href=""><span class="icon"></span>其它</a> </li>-->
+                                    &lt;!&ndash;<li  ><a href=""><span class="icon"></span>其它</a> </li>&ndash;&gt;
                                 </ul>
                             </div>
                         </div>
-                        <!--
+                        &lt;!&ndash;
                         <ul class="legend-bottom">
                         	<li><a ><span class="icon"></span>中海博睿</a></li>
                         	 ##for(type in productLine){
@@ -196,10 +196,10 @@
                         	 		##}
                         	  ##}
                         </ul>
--->
+&ndash;&gt;
                     </div>
                 </div>
-                <div class="toLabData">进入实验室 <span>&gt;&gt;</span></div>
+                <div class="toLabData">进入实验室 <span>&gt;&gt;</span></div>-->
             </div>
             <div class="switch flat sphere" style="display: flex">
                 <div class="flat-main">
