--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -99,7 +99,8 @@
                 <div class="viewAll">
                     <h4>设备负荷率</h4>
                     <table>
-                        <tbody>
+                        <tbody></tbody>
+                        <!--<tbody>
                         <tr>
                             <td class="name">检测中心</td>
                             <td class="barBox"><span class="bar"><span class="fill"></span></span></td>
@@ -154,7 +155,7 @@
                             <td class="value">95.2%</td>
                             <td class="YoY up">同比：<span>1.3%</span></td>
                         </tr>
-                        </tbody>
+                        </tbody>-->
                     </table>
                 </div>
             </div>
