--- a/src/main/webapp/static/css/cover.css
+++ b/src/main/webapp/static/css/cover.css
@@ -34,6 +34,7 @@
 #cover .switchBox {
     height: 90%;
 }
+
 #cover .statusCover {
     height: 100%;
     display: flex;
@@ -44,38 +45,45 @@
     flex: 1;
     display: flex;
 }
-#cover .statusCover > * >*{
+
+#cover .statusCover > * > * {
     display: flex;
     flex: 1;
 }
-.top-3{
+
+.top-3 {
     cursor: pointer;
 }
+
 #cover .box {
     margin: 1.75em 2em;
     width: 100%;
     background: url("../../static/img/3rd/cover_border.png");
     background-size: 100% 100%;
 }
-#cover .box>h4{
+
+#cover .box > h4 {
     margin-top: 3.25em;
     text-align: center;
     font-size: 2em;
 }
-#cover .box>.number {
+
+#cover .box > .number {
     position: relative;
     color: #f93;
     font-size: 4.5em;
     text-align: center;
     margin-top: .5em;
 }
-#cover .box>.number>.level {
+
+#cover .box > .number > .level {
     position: absolute;
     top: 0;
     right: 6em;
     font-size: .375em;
 }
-#cover .box>.number>.level>.circle {
+
+#cover .box > .number > .level > .circle {
     display: inline-block;
     width: 1em;
     height: 1em;
@@ -85,35 +93,44 @@
     /*background: radial-gradient(circle farthest-side at 50% 50%,rgba(0,230,115,1) 33%,rgba(0,230,115,.6) 35%,rgba(0,230,115,.6) 66%,rgba(0,230,115,.3) 68%,rgba(0,230,115,.3));*/
     background-size: 100% 100%;
 }
-#cover .box>.number>.level.good>.circle {
+
+#cover .box > .number > .level.good > .circle {
     background-image: url("../../static/img/3rd/level_yellow.png");
 }
-#cover .box>.number>.level.bad>.circle {
+
+#cover .box > .number > .level.bad > .circle {
     background-image: url("../../static/img/3rd/level_red.png");
 }
-#cover .box>.number>.level.best{
-    color: rgba(0,230,115,1);
+
+#cover .box > .number > .level.best {
+    color: rgba(0, 230, 115, 1);
 
 }
-#cover .box>.number>.level.good{
+
+#cover .box > .number > .level.good {
     color: #ffec3d;
 }
-#cover .box>.number>.level.bad{
+
+#cover .box > .number > .level.bad {
     color: #ff4d4f;
 }
-#cover .bottom .box>h4{
+
+#cover .bottom .box > h4 {
     margin-top: 2.25em;
 }
-#cover .bottom .box>.number{
+
+#cover .bottom .box > .number {
     margin-top: .375em;
     margin-bottom: .25em;
 }
-#cover .YoY{
+
+#cover .YoY {
     position: relative;
     font-size: 2em;
     text-align: center;
 }
-#cover .YoY:after{
+
+#cover .YoY:after {
     content: "";
     position: absolute;
     top: .125em;
@@ -124,31 +141,37 @@
     background-image: url("../../static/img/3rd/level_up.png");
     background-size: 100% 100%;
 }
-#cover .YoY.down:after{
+
+#cover .YoY.down:after {
     background-image: url("../../static/img/3rd/level_down.png");
 }
 
-#cover .deviceLoad{
+/*明细页面*/
+#cover .deviceLoad {
     display: flex;
     height: 100%;
 }
-#cover .deviceLoad>.btn-back{
+
+#cover .deviceLoad > .btn-back {
     position: absolute;
     left: 1.25em;
     top: 1.75em;
 }
-#cover .deviceLoad>.btn-back>.icon{
+
+#cover .deviceLoad > .btn-back > .icon {
     display: block;
     width: 2.5em;
     height: 2.5em;
     background-image: url(../img/3rd/back.png);
     background-size: 100% 100%;
 }
-#cover .deviceLoad>div{
+
+#cover .deviceLoad > div {
     display: flex;
     flex: 1;
 }
-#cover .deviceLoad>div>div{
+
+#cover .deviceLoad > div > div {
     position: relative;
     width: 100%;
     margin: 0 3em 2em 1em;
@@ -156,50 +179,79 @@
     background-image: url("../img/3rd/deviceLoad_border.png");
     background-size: 100% 100%;
 }
-#cover .deviceLoad>div>div>h4{
+
+#cover .deviceLoad > div > div > h4 {
     position: absolute;
     left: 22%;
     top: 1.3%;
     transform: translateX(-50%);
     font-size: 2em;
 }
-#cover .deviceLoad>div>div table{
+
+#cover .deviceLoad > div > div table {
     font-size: 1.75em;
     width: 100%;
 }
-#cover .deviceLoad>div>div tr:nth-child(even){
+
+#cover .deviceLoad > div > div tr:nth-child(even) {
     background-color: rgba(54, 129, 179, 0.2)
 }
-#cover .deviceLoad>div>div tr:nth-child(odd){
+
+#cover .deviceLoad > div > div tr:nth-child(odd) {
     background-color: rgba(35, 79, 101, 0.2)
 }
-#cover .deviceLoad>div>div table td,
-#cover .deviceLoad>div>div table th{
+
+#cover .deviceLoad > div > div table td,
+#cover .deviceLoad > div > div table th {
     padding: .8125em 1em;
     text-align: center;
 }
-#cover .deviceLoad>div>div table th{
+
+#cover .deviceLoad > div > div table th {
     color: #fff;
     background-color: #184266;
 }
-#cover .deviceLoad>div>div table .YoY{
+
+/*进度条上显示80-100的标志*/
+#cover .deviceLoad > div > div table tr:first-child .bar{
+    position: relative;
+}
+#cover .deviceLoad > div > div table tr:first-child .bar:before,
+#cover .deviceLoad > div > div table tr:first-child .bar:after {
+    content: "80";
+    position: absolute;
+    top: -1.55em;
+    left: 0;
+    font-size: .625em;
+    color: #3F51B5;
+}
+#cover .deviceLoad > div > div table tr:first-child .bar:after {
+    content: "100";
+    left: auto;
+    right: 0;
+}
+#cover .deviceLoad > div > div table .YoY {
     font-size: 1em;
 }
-#cover .deviceLoad>div>div table .YoY:after{
+
+#cover .deviceLoad > div > div table .YoY:after {
     top: .9325em;
 }
-#cover .scrollBoard{
+
+#cover .scrollBoard {
     height: 37em;
     overflow: hidden;
 }
-#cover table .barBox>.bar{
+
+#cover table .barBox > .bar {
     display: block;
     width: 10em;
     height: .75em;
     border-radius: .5em;
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(0, 0, 0, .8);
 }
-#cover table .barBox>.bar>.fill{
+
+#cover table .barBox > .bar > .fill {
     display: block;
     position: relative;
     top: 10%;
@@ -208,7 +260,8 @@
     border-radius: .5em;
     transition: width 1s;
 }
-#cover table tr .fill{
+
+#cover table tr .fill {
     background-color: #6cf;
 }
 
