动画完成，但神经网络的视频背景无法透明，背景色待修改

--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -20,8 +20,8 @@
         </div>
         <div class="textBox">
             <div class="text">
-                海尔全球拥有624个实验室，分布在10大研发中心和24个工业园区的108个工厂，具备10个整机专业领域和10大类模块的检测能力，并获得UL/VDE/
-                TUV等28个国际权威机构授权、数据互认，可提供全球市场准入认证测试。
+                <p>海尔全球拥有882个实验室，分布在10大研发中心和24个工业园区的108个工厂，覆盖了海尔50多类产品全生命周期的检测需求。
+                <p>海尔检测中心具备整机和模块6000多个项目的检测能力，并获得UL、VDE、TUV、JET等28个国际权威机构授权、数据互认，可提供全球市场准入认证测试。
             </div>
         </div>
     </div>
