--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -90,16 +90,19 @@ header .mainLogo {
 }
 
 .text {
-    margin: 3rem 2rem 0 0;
+    margin: 1rem 1rem 0 0;
     padding: 2rem 1rem;
-    border: .125rem solid var(--themeColor);
+    text-align: justify;
+    /*border: .125rem solid var(--themeColor);*/
     line-height: 2rem;
     font-size: 1.125rem;
     letter-spacing: .125rem;
-    box-shadow: inset 0 0 2rem 0.25rem rgba(102, 204, 255,.2);
+    /*box-shadow: inset 0 0 2rem 0.25rem rgba(102, 204, 255,.2);*/
 
 }
-
+.text p{
+    text-indent: 2em;
+}
 
 
 
