冰箱开关门的bug;完成循环动画并加入到PHM原网页中

--- a/src/main/webapp/static/phm/css/indexAnimation.css
+++ b/src/main/webapp/static/phm/css/indexAnimation.css
@@ -1,4 +1,6 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     color: var(--blue);
 }
@@ -13,10 +15,9 @@ html, body {
 }
 
 body {
-    width: 84rem;
-    height: 36rem;
-    /*padding: 1rem;*/
-    background-color: #07151d;
+    width: 99%;
+    /*height: 31rem;*/
+    /*background-color: #07151d;*/
 }
 
 .myContainer {
@@ -33,7 +34,8 @@ body {
 
 }
 .textPicBox  h3{
-    margin-bottom: 6rem;
+    font-weight: normal;
+    margin-bottom: 2rem;
 }
 
 .textPicBox:nth-of-type(1) {
@@ -46,7 +48,7 @@ body {
     right: 6rem;
 }
 .textPicBox:nth-of-type(2) h3 {
-    margin-bottom: 3rem;
+    /*margin-bottom: 3rem;*/
 
 }
 
@@ -57,45 +59,51 @@ body {
 .textPicBox .picBox {
     transition: all 1s;
     position: relative;
-    transform-origin: 18rem -3rem;
+    transform-origin: 18rem -1rem;
     left: -1rem;
-    top: 3rem;
+    top: 1rem;
     height: 15rem;
     background: url("../images/system/cnn.png") no-repeat;
     /*下面两行是因为换图和原来的对不上而做的调整*/
     background-size: 91% 84%;
     background-position: 47% 47%;
-    opacity: .8;
+    opacity: .99;
 }
 
 /*光效动画*/
-.light .line {
+
+.line {
     position: absolute;
     right: 0;
-    height: .375em;
-    width: 1em;
-    background: radial-gradient(ellipse farthest-side at 0 50%, var(--blue), rgba(0, 0, 0, 0));
+    width: 0;
     animation-fill-mode: forwards;
     opacity: 0;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
     transform-origin: right center;
+    transition-property: all;
+    transition-duration: 1s;
 }
-
-.light .line.animate {
-    animation-name: animate;
-}
-
-.light .line:after {
+.line:before {
     content: '';
     position: absolute;
     left: 0;
     top: 50%;
     transform: translate(-50%, -50%);
     display: block;
+}
+
+.light .line {
+    height: .375em;
+    background: radial-gradient(ellipse farthest-side at 0 50%, var(--blue), rgba(0, 0, 0, 0));
+}
+
+.light .line:before {
     width: .75em;
     height: .75em;
     background: radial-gradient(closest-side, white, var(--blue) 40%, rgba(0, 0, 0, 0));
+}
+
+.light .line.animate {
+    animation-name: animate;
 }
 
 @keyframes animate {
@@ -118,8 +126,8 @@ body {
 
 /*右边的光束*/
 .animationBox-right {
-    right: 0;
-    top: 10rem;
+    right: 2rem;
+    top: 7rem;
     width: 12rem;
 }
 
@@ -146,7 +154,7 @@ body {
 /*中间的光束*/
 .animationBox-center {
     left: 40%;
-    top: 13rem;
+    top: 10rem;
     width: 12rem;
     filter: hue-rotate(-90deg);
 }
@@ -164,7 +172,7 @@ body {
 /*左边的光束*/
 .animationBox-left {
     left: 2rem;
-    top: 13rem;
+    top: 11rem;
     width: 12rem;
 }
 
@@ -181,35 +189,24 @@ body {
     transform: rotate(-10deg);
 }
 
-/*智能算法*/
+/*神经网络*/
 .aiBox .line {
-    position: absolute;
-    right: 0;
-    width: 0;
     height: .125rem;
     background: yellow;
     transition-property: all;
     transition-duration: 1s;
-    transform-origin: 100% 0;
 }
 
-
-
+.aiBox .line.animate,
 .aiBox .line.animate:before {
     opacity: 1;
 }
 
 .aiBox .line:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 50%;
-    display: block;
     width: .5rem;
     height: .25rem;
     transform: translate(-50%, -50%) skew(-65deg, 30deg);
     background: linear-gradient(to right top, yellow 50%, rgba(0, 0, 0, 0) 50%);
-    opacity: 0;
 }
 
 .aiBox > div {
@@ -315,27 +312,12 @@ body {
     transform: rotate(45deg);
 }
 
-.aiBox .line.animate:nth-of-type(4) {
-    /*width: 4.25rem;*/
-}
-
-.aiBox .line.animate:nth-of-type(5) {
-    /*width: 3rem;*/
-}
-
-.aiBox .line.animate:nth-of-type(6) {
-    /*width: 4.25rem;*/
-}
-
 .aiBox .line:nth-of-type(7) {
     right: 14rem;
     top: 5rem;
     transform: rotate(-90deg);
 }
 
-.aiBox .line.animate:nth-of-type(7) {
-    /*width: 1.375rem;*/
-}
 
 .aiBox .line:nth-of-type(8) {
     right: 15.125rem;
@@ -351,15 +333,14 @@ body {
     top: 7.5rem;
 }
 
-.aiBox .line.animate:nth-of-type(9) {
-    /*width: 3rem;*/
-}
 
 .videoBox{
     position: absolute;
-    top: 5rem;
+    left: 4rem;
+    top: 3rem;
     z-index: -1;
-    width: 28rem;
+    width: 21rem;
+    box-shadow: 0 0 .625rem .375rem #090f24;
 }
 .videoBox>video{
     width: 100%;
