--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -10,7 +10,7 @@
     text-decoration: none;
 }
 
-html, body,#myContainer {
+html, body, #myContainer {
     height: 100%;
 }
 
@@ -18,14 +18,60 @@ body {
     background: url("../../static/img/bg-2.jpg") no-repeat;
     background-size: cover;
 }
+
 #myContainer {
     position: relative;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
+    padding: 0 1rem;
 }
+
+#container,
+#container > div {
+    display: flex;
+
+}
+
+.left,
+.right {
+    flex: .8;
+    display: flex;
+    flex-direction: column;
+}
+
+.left > div,
+    /*.mid>div,*/
+.right > div {
+    flex: 1;
+    padding: 1rem;
+}
+
+.mid {
+    flex: 2;
+}
+
+.box {
+    height: 100%;
+    background: url("../img/hallMap/bd_item.png") no-repeat;
+    background-size: 100% 100%;
+    /*border: .125rem solid;*/
+}
+
+.box h3 {
+    font-size: .875em;
+    font-weight: normal;
+    text-align: center;
+    color: #fff;
+    position: relative;
+    top: .1875rem;
+}
+
 header {
     position: relative;
     height: 6.5rem;
-    padding-top: 1%;
+    /*padding-top: 1%;*/
+    font-size: .875rem;
     text-align: center;
     background: url(../img/bg_title.png) no-repeat;
     background-position-x: 50%;
@@ -44,8 +90,8 @@ h1 {
 
 h1:nth-of-type(1) {
     margin: 0 auto;
-    padding: .5% 0 .3% 12%;
-    letter-spacing: 1rem;
+    padding: .5% 0 .3% 2.5em;
+    letter-spacing: .125em;
 }
 
 h1:nth-of-type(2) {
@@ -57,10 +103,10 @@ h1:nth-of-type(2) {
 header .mainLogo {
     display: inline-block;
     position: absolute;
-    width: 6rem;
-    height: 3rem;
-    top: 1rem;
-    left: 24rem;
+    width: 5em;
+    height: 2.5em;
+    top: .75em;
+    left: 30em;
     background: url(../img/logo_haier.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -73,6 +119,8 @@ header .mainLogo {
 
 .mapBox {
     flex: 3;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
 }
 
@@ -82,25 +130,153 @@ header .mainLogo {
 
 .mapBox > iframe {
     position: relative;
-    top: -2rem;
+    flex: 3;
+    top: 0;
     right: 2rem;
     width: 100%;
+    transform: translateY(2%) scaleY(1);
+}
+
+.mapBox > .flatMapCtr {
+    flex: 1;
+}
+
+.flatMapCtr .legend {
+    position: relative;
+    margin: 0 auto;
+    width: 28rem;
     height: 100%;
-    transform: translateY(5%) scaleY(1.08);
 }
 
-.text {
-    margin: 1rem 1rem 0 0;
-    padding: 2rem 1rem;
+.legend-m {
+    height: 57%;
+    background: url("../img/hallMap/bd_mapNav.png") no-repeat;
+    background-size: contain;
+}
+
+.legend-b {
+    margin: 0 auto;
+    width: 13em;
+    height: 24%;
+    background: url(../img/hallMap/bd_mapNav_b.png) 50% no-repeat;
+    background-size: contain;
+    cursor: pointer;
+}
+
+.legend-l,
+.legend-r {
+    position: absolute;
+    height: 3.4375em;
+    width: 4em;
+    top: .625em;
+    left: -3.5em;
+    background: url(../img/hallMap/bd_btn.png) no-repeat;
+    background-size: contain;
+    cursor: pointer;
+}
+.legend-l.active,
+.legend-r.active {
+    background-image: url(../img/hallMap/bd_btn_a.png)
+}
+.active *{
+    color: #00e673;
+}
+.legend-r {
+    left: auto;
+    right: -3.5em;
+}
+.legend .text{
+    font-size: .75em;
+}
+
+.legend-l > .text,
+.legend-r > .text {
+    transform: translate(-50%, -50%);
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    left: 50%;
+    top: 50%;
+    transition: transl;
+}
+.legend-m>.text{
+    position: relative;
+    height: 1.25em;
+    overflow: hidden;
+    top: 2.25em;
+}
+.legend-m ul{
+    text-align: center;
+}
+.legend-m ul>li{
+    list-style: none;
+    display: inline-block;
+    width: 8em;
+}
+.legend-m ul>li>a{
+    color: #999;
+    display: block;
+}
+.legend-m ul>li>a:before{
+    content: "";
+    position: relative;
+    top: .125em;
+    display: inline-block;
+    margin-right: .5em;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    background: radial-gradient(circle,#999,rgba(0,0,0,0))
+}
+.legend{
+    --color1:#00e673;
+    --color2:#ffec3d;
+    --color3:#b37feb;
+    --color4:#ff85c0;
+}
+.legend-m ul:first-of-type>li.active:nth-of-type(1)>a,
+.legend-m ul:first-of-type>li.active:nth-of-type(1)>a:before{
+    color: var(--color1);
+    background: radial-gradient(circle,var(--color1),rgba(0,0,0,0));
+}
+.legend-m ul:first-of-type>li.active:nth-of-type(2)>a,
+.legend-m ul:first-of-type>li.active:nth-of-type(2)>a:before{
+    color: var(--color2);
+    background: radial-gradient(circle,var(--color2),rgba(0,0,0,0));
+}
+.legend-m ul:first-of-type>li.active:nth-of-type(3)>a,
+.legend-m ul:first-of-type>li.active:nth-of-type(3)>a:before{
+    color: var(--color3);
+    background: radial-gradient(circle,var(--color3),rgba(0,0,0,0));
+}
+.legend-m ul:first-of-type>li.active:nth-of-type(4)>a,
+.legend-m ul:first-of-type>li.active:nth-of-type(4)>a:before{
+    color: var(--color4);
+    background: radial-gradient(circle,var(--color4),rgba(0,0,0,0));
+}
+.legend-m ul:first-of-type>li.active>a{
+    background: none!important;
+}
+.legend-b>.text{
+    position: relative;
+    text-align: center;
+    top: .625em;
+}
+
+
+
+footer .text {
+    margin: 0 auto;
+    width: 59rem;
+    padding-bottom: 1rem;
     text-align: justify;
-    /*border: .125rem solid var(--themeColor);*/
-    line-height: 2rem;
-    font-size: 1.125rem;
-    letter-spacing: .125rem;
-    /*box-shadow: inset 0 0 2rem 0.25rem rgba(102, 204, 255,.2);*/
+    line-height: 1.25rem;
+    font-size: .9325rem;
+    letter-spacing: .0625rem;
 
 }
-.text p{
+
+footer .text p {
     text-indent: 2em;
 }
 
