--- a/src/main/webapp/static/phm/css/indexAnimation.css
+++ b/src/main/webapp/static/phm/css/indexAnimation.css
@@ -340,9 +340,10 @@ body {
     top: 3rem;
     z-index: -1;
     width: 21rem;
-    box-shadow: 0 0 .625rem .375rem #090f24;
+    box-shadow: 0 2rem 6rem 2rem #090f24;
 }
 .videoBox>video{
+    display: block;
     width: 100%;
     height: 100%;
 }
