--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -16,7 +16,7 @@
         });
 
         function pageResize() {
-            $("html").css("font-size", htmlFontSize).css("opacity",1);
+            $("html").css("font-size", htmlFontSize).css("opacity", 1);
             $("#myContainer").css("width", pageH * 16 / 9);
             console.log("~~~~~~~~~窗口高度：" + pageH + ",\n宽度:" + pageW + " \nbody字号：" + htmlFontSize)
         }
@@ -32,13 +32,52 @@
     <div id="container">
         <div class="left">
             <div class="left-top">
-                <div class="box">
+                <div class="box distribution">
                     <h3>海尔全球实验室分布</h3>
+                    <div class="totalNum"><span><strong>5</strong>大洲</span>
+                        <span><strong>18</strong>个国家</span>
+                    </div>
+                    <ul>
+                        <li><strong>10</strong>大研发中心</li>
+                        <li><strong>23</strong>个工业园区</li>
+                        <li><strong>108</strong>个工厂</li>
+                    </ul>
                 </div>
             </div>
             <div class="left-bottom">
-                <div class="box">
+                <div class="box test">
                     <h3>全流程测试指标监控(当月)</h3>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th>测试类别</th>
+                            <th>订单量</th>
+                            <th>合格率</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>研发调试：</td>
+                            <td>3576</td>
+                            <td>——</td>
+                        </tr>
+                        <tr>
+                            <td>新品认证：</td>
+                            <td>3969</td>
+                            <td>93.0%</td>
+                        </tr>
+                        <tr>
+                            <td>量产测试：</td>
+                            <td>3734</td>
+                            <td>96.7%</td>
+                        </tr>
+                        <tr>
+                            <td>监督抽查：</td>
+                            <td>383</td>
+                            <td>100%</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -48,17 +87,20 @@
                         frameborder="0"></iframe>
                 <div class="flatMapCtr" style="">
                     <div class="legend">
-                        <div class="legend-l">
+                        <div class="legend-l btn">
                             <div class="text">产线</div>
                         </div>
                         <div class="legend-m">
-
+                            <div class="selectAll">
+                                <input id="selectAll" type="checkbox" checked hidden>
+                                <label for="selectAll">全选</label>
+                            </div>
                             <div class="text">
                                 <ul>
-                                    <li class="active"><a href>研发中心</a></li>
-                                    <li class="active"><a href>检测中心</a></li>
-                                    <li class=""><a href>制造工厂</a></li>
-                                    <li class="active"><a href>模块商</a></li>
+                                    <li><a href>研发中心</a></li>
+                                    <li><a href>检测中心</a></li>
+                                    <li><a href>制造工厂</a></li>
+                                    <li><a href>模块商</a></li>
                                 </ul>
                                 <ul>
                                     <li><a href>冰冷</a></li>
@@ -71,7 +113,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="legend-r active">
+                        <div class="legend-r btn active">
                             <div class="text">实验室</div>
                         </div>
                         <div class="legend-b">
@@ -83,13 +125,75 @@
         </div>
         <div class="right">
             <div class="right-top">
-                <div class="box">
+                <div class="box interconnection">
                     <h3>全球实验室互联</h3>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th>实验室数</th>
+                            <th>互联数</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>海尔全球：</td>
+                            <td>882</td>
+                            <td>509</td>
+                        </tr>
+                        <tr>
+                            <td>研发中心：</td>
+                            <td>405</td>
+                            <td>195</td>
+                        </tr>
+                        <tr>
+                            <td>检测中心：</td>
+                            <td>57</td>
+                            <td>48</td>
+                        </tr>
+                        <tr>
+                            <td>制造工厂：</td>
+                            <td>262</td>
+                            <td>180</td>
+                        </tr>
+                        <tr>
+                            <td>模块商：</td>
+                            <td>158</td>
+                            <td>86</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <div class="right-bottom">
-                <div class="box">
+                <div class="box management">
                     <h3>实验室管理指标监控(当月)</h3>
+                    <ul>
+                        <li>
+                            <div>
+                            <strong>91.5%</strong><br>
+                                <div class="disc">实验室资源合格率</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                            <strong>93.0%</strong><br>
+                                <div class="disc">人员资源<br>合格率</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                            <strong>96%</strong><br>
+                                <div class="disc">设备完好率</div>
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                            <strong>97.2%</strong><br>
+                                <div class="disc">订单及时率</div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -97,22 +201,13 @@
 
     <footer class="textBox">
         <div class="text">
-            <p>海尔检测认证中心承接集团各产品60多类市场准入认证，覆盖87个国家，合作的30多家国际认证机构包括UL、VDE、TUV、SAA、SASO、JET 等认证，全部进行了实验室数据互认，无需跨出国门，便可以得到国际化的专业检测，以最快的速度、最经济的成本，满足全球各地产品认证的需求。
+            <p>海尔检测认证中心承接集团各产品60多类市场准入认证，覆盖87个国家，合作的30多家国际认证机构包括UL、VDE、TUV、SAA、SASO、JET
+                等认证，全部进行了实验室数据互认，无需跨出国门，便可以得到国际化的专业检测，以最快的速度、最经济的成本，满足全球各地产品认证的需求。
         </div>
     </footer>
 
 </div>
-<script>
-    function parentMethod() {//平面地图的数据加载
-        var bodyScale = 1;
-        // $("#iframeFlat")[0].contentWindow.createArrData("21,22,23,24,25,26,27", "2,1,4,3");
-        $("#iframeFlat")[0].contentWindow.createArrData("", "");
-    }
-
-    $(function () {
-        $(window.frames["iframeFlat"].document).find("")
-    })
-</script>
+<script src="${contextPath!}/static/js/hallMap.js"></script>
 <script>
 
 </script>
