--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -9,53 +9,64 @@
     color: var(--themeColor);
     text-decoration: none;
 }
-
-html, body, #myContainer {
-    height: 100%;
-}
-
-body {
-    background: url("../../static/img/bg-2.jpg") no-repeat;
-    background-size: cover;
-}
-
-#myContainer {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 0 1rem;
-}
-
-#container,
-#container > div {
-    display: flex;
+li{
+    list-style: none;
 
 }
-
-.left,
-.right {
-    flex: .8;
-    display: flex;
-    flex-direction: column;
+strong{
+    font-weight: normal;
+    color: #f93;
 }
 
-.left > div,
-    /*.mid>div,*/
-.right > div {
-    flex: 1;
-    padding: 1rem;
-}
+/*布局*/
+@media all {
+    html, body, #myContainer {
+        height: 100%;
+    }
 
-.mid {
-    flex: 2;
+    body {
+        background: url("../../static/img/bg-2.jpg") no-repeat;
+        background-size: cover;
+    }
+
+    #myContainer {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 0 1rem;
+    }
+
+    #container,
+    #container > div {
+        display: flex;
+
+    }
+
+    .left,
+    .right {
+        flex: .8;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .left > div,
+        /*.mid>div,*/
+    .right > div {
+        flex: 1;
+        padding: 1rem;
+    }
+
+    .mid {
+        flex: 2;
+    }
 }
 
 .box {
     height: 100%;
+    font-size: .75rem;
     background: url("../img/hallMap/bd_item.png") no-repeat;
     background-size: 100% 100%;
-    /*border: .125rem solid;*/
 }
 
 .box h3 {
@@ -67,49 +78,52 @@ body {
     top: .1875rem;
 }
 
-header {
-    position: relative;
-    height: 6.5rem;
-    /*padding-top: 1%;*/
-    font-size: .875rem;
-    text-align: center;
-    background: url(../img/bg_title.png) no-repeat;
-    background-position-x: 50%;
-    background-position-y: 1em;
-    background-size: 98% 80%;
-}
+/*header*/
+@media all{
+    header {
+        position: relative;
+        height: 6.5rem;
+        font-size: .875rem;
+        text-align: center;
+        background: url(../img/bg_title.png) no-repeat;
+        background-position-x: 50%;
+        background-position-y: 1em;
+        background-size: 98% 80%;
+    }
 
-h1 {
-    position: relative;
-    font-size: 2.5em;
-    letter-spacing: .05em;
-    line-height: 1.2em;
-    font-weight: normal;
+    h1 {
+        position: relative;
+        font-size: 2.5em;
+        letter-spacing: .05em;
+        line-height: 1.2em;
+        font-weight: normal;
 
-}
+    }
 
-h1:nth-of-type(1) {
-    margin: 0 auto;
-    padding: .5% 0 .3% 2.5em;
-    letter-spacing: .125em;
-}
+    h1:nth-of-type(1) {
+        margin: 0 auto;
+        padding: .5% 0 .3% 2.5em;
+        letter-spacing: .125em;
+    }
 
-h1:nth-of-type(2) {
-    font-size: 1.9em;
-    margin-top: 0;
-    padding-left: 2rem;
-}
+    h1:nth-of-type(2) {
+        font-size: 1.9em;
+        margin-top: 0;
+        padding-left: 2rem;
+    }
 
-header .mainLogo {
-    display: inline-block;
-    position: absolute;
-    width: 5em;
-    height: 2.5em;
-    top: .75em;
-    left: 30em;
-    background: url(../img/logo_haier.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    header .mainLogo {
+        display: inline-block;
+        position: absolute;
+        width: 5em;
+        height: 2.5em;
+        top: .75em;
+        left: 30em;
+        background: url(../img/logo_haier.png);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+
 }
 
 #container {
@@ -140,128 +154,259 @@ header .mainLogo {
 .mapBox > .flatMapCtr {
     flex: 1;
 }
+/*导航*/
+@media all {
+    .flatMapCtr .legend {
+        position: relative;
+        margin: 0 auto;
+        width: 28rem;
+        height: 100%;
+    }
 
-.flatMapCtr .legend {
-    position: relative;
-    margin: 0 auto;
-    width: 28rem;
-    height: 100%;
+    .legend-m {
+        height: 57%;
+        background: url("../img/hallMap/bd_mapNav.png") no-repeat;
+        background-size: contain;
+    }
+
+    .legend-b {
+        margin: 0 auto;
+        width: 13em;
+        height: 24%;
+        background: url(../img/hallMap/bd_mapNav_b.png) 50% no-repeat;
+        background-size: contain;
+        cursor: pointer;
+    }
+
+    .legend-l,
+    .legend-r {
+        position: absolute;
+        height: 3.4375em;
+        width: 4em;
+        top: .625em;
+        left: -3.5em;
+        background: url(../img/hallMap/bd_btn.png) no-repeat;
+        background-size: contain;
+        cursor: pointer;
+    }
+    .legend-l.active,
+    .legend-r.active {
+        background-image: url(../img/hallMap/bd_btn_a.png)
+    }
+    .active *{
+        color: #00e673;
+    }
+    .legend-r {
+        left: auto;
+        right: -3.5em;
+    }
+    .legend .text{
+        font-size: .75em;
+    }
+
+    .legend-l > .text,
+    .legend-r > .text {
+        transform: translate(-50%, -50%);
+        text-align: center;
+        position: absolute;
+        width: 100%;
+        left: 50%;
+        top: 50%;
+        transition: transl;
+    }
+    .legend-m>.text{
+        position: relative;
+        height: 1.25em;
+        overflow: hidden;
+        top: 2.25em;
+    }
+
+    /*全选*/
+    .legend-m>.selectAll{
+        position: absolute;
+        left: 50%;
+    }
+    .legend-m>.selectAll>label{
+        position: relative;
+        font-size: .75rem;
+        cursor: pointer;
+        filter: grayscale(1);
+    }
+    .legend-m>.selectAll>input ~ label:before{
+        content: "";
+        position: absolute;
+        left: -1rem;
+        top: 55%;
+        display: inline-block;
+        transform: translateY(-50%);
+        width: 1em;
+        height: 1em;
+        color: #999;
+        background: url("../img/hallMap/i_selectAll.png") no-repeat;
+        background-size: contain;
+    }
+    .legend-m>.selectAll>input:checked ~ label{
+        filter: grayscale(0);
+    }
+    .legend-m ul{
+        position: relative;
+        text-align: center;
+    }
+    .legend-m ul>li{
+        display: inline-block;
+        width: auto;
+        margin: 0 .375em;
+    }
+    .legend-m ul:nth-of-type(1)>li{
+        margin: 0 1.25em;
+    }
+    .legend-m ul>li>a{
+        color: #999;
+        display: block;
+    }
+    .legend-m ul>li.active>a{
+        text-shadow: 0 0 .0625em;
+
+    }
+    .legend-m ul>li>a:before{
+        content: "";
+        position: relative;
+        top: .125em;
+        display: inline-block;
+        margin-right: .5em;
+        width: 1em;
+        height: 1em;
+        border-radius: 50%;
+        background: radial-gradient(circle,#999,rgba(0,0,0,0))
+    }
+    .legend{
+        --c-lab1:#00e673;
+        --c-lab2:#ffec3d;
+        --c-lab3:#b37feb;
+        --c-lab4:#ff85c0;
+    }
+    .legend-m ul:first-of-type>li.active:nth-of-type(1)>a,
+    .legend-m ul:first-of-type>li.active:nth-of-type(1)>a:before{
+        color: var(--c-lab1);
+        background: radial-gradient(circle,var(--c-lab1),rgba(0,0,0,0));
+    }
+    .legend-m ul:first-of-type>li.active:nth-of-type(2)>a,
+    .legend-m ul:first-of-type>li.active:nth-of-type(2)>a:before{
+        color: var(--c-lab2);
+        background: radial-gradient(circle,var(--c-lab2),rgba(0,0,0,0));
+    }
+    .legend-m ul:first-of-type>li.active:nth-of-type(3)>a,
+    .legend-m ul:first-of-type>li.active:nth-of-type(3)>a:before{
+        color: var(--c-lab3);
+        background: radial-gradient(circle,var(--c-lab3),rgba(0,0,0,0));
+    }
+    .legend-m ul:first-of-type>li.active:nth-of-type(4)>a,
+    .legend-m ul:first-of-type>li.active:nth-of-type(4)>a:before{
+        color: var(--c-lab4);
+        background: radial-gradient(circle,var(--c-lab4),rgba(0,0,0,0));
+    }
+    .legend-m ul:first-of-type>li.active>a{
+        background: none!important;
+    }
+    .legend-b>.text{
+        position: relative;
+        text-align: center;
+        top: .625em;
+    }
 }
 
-.legend-m {
-    height: 57%;
-    background: url("../img/hallMap/bd_mapNav.png") no-repeat;
-    background-size: contain;
-}
 
-.legend-b {
-    margin: 0 auto;
-    width: 13em;
-    height: 24%;
-    background: url(../img/hallMap/bd_mapNav_b.png) 50% no-repeat;
-    background-size: contain;
-    cursor: pointer;
-}
 
-.legend-l,
-.legend-r {
-    position: absolute;
-    height: 3.4375em;
-    width: 4em;
-    top: .625em;
-    left: -3.5em;
-    background: url(../img/hallMap/bd_btn.png) no-repeat;
-    background-size: contain;
-    cursor: pointer;
-}
-.legend-l.active,
-.legend-r.active {
-    background-image: url(../img/hallMap/bd_btn_a.png)
-}
-.active *{
-    color: #00e673;
-}
-.legend-r {
-    left: auto;
-    right: -3.5em;
-}
-.legend .text{
-    font-size: .75em;
-}
 
-.legend-l > .text,
-.legend-r > .text {
-    transform: translate(-50%, -50%);
+
+/*全球分布*/
+.distribution{
     text-align: center;
+}
+.distribution .totalNum>span{
+    display: inline-block;
+    margin-right: 1rem;
+    margin-top: 1.5rem;
+}
+.distribution ul>li{
+    list-style: none;
+    margin: .5rem 2rem;
+    padding: .5rem;
+    background: url("../img/hallMap/bg_distributionLi.png");
+    background-size: 100% 100%;
+}
+.distribution strong{
+    font-size: .875rem;
+}
+/*全流程测试*/
+.test table{
+    border-collapse: collapse;
+    margin: 1rem 0 0 .625rem;
+    text-align: center;
+}
+.test table thead{
+    background-color: #66ccff44;
+}
+.test table th{
+    font-weight: normal;
+}
+.test table tr:nth-of-type(odd){
+    background-color: rgba(99,99,99,.23);
+}
+.test table tr:nth-of-type(even){
+    background-color: rgba(199,199,199,.05);
+}
+.test table th,
+.test table td{
+    padding: .5rem .625rem;
+}
+.test table td:nth-of-type(2),
+.test table td:nth-of-type(3){
+    color: #f93;
+}
+/*互联数*/
+.interconnection table {
+    margin:  1rem .5rem .5rem 1rem;
+}
+.interconnection table th{
+    padding-bottom: .5rem;
+}
+.interconnection table td:nth-of-type(2),
+.interconnection table td:nth-of-type(3){
+    padding: .25rem 0 .125rem 1rem;
+    text-align: right;
+    font-size: .875rem;
+    letter-spacing: 0.375rem;
+    color: #f90;
+    background: url(../img/hallMap/bg_interconnectionTd.png) 12% 50% no-repeat;
+    background-size: 94% 80%;
+}
+
+/*实验室管理*/
+.management ul{
+    margin: .9375rem 0 0 .75rem;
+}
+.management ul>li{
+    position: relative;
+    display: inline-block;
+    margin: .125rem .5rem;
+    width: 4.75rem;
+    height: 4.75rem;
+    text-align: center;
+    border-radius: 50%;
+    border: .0625rem solid #66ccff88;
+    background-color: #66ccff22;
+}
+.management ul>li>div{
     position: absolute;
-    width: 100%;
     left: 50%;
     top: 50%;
-    transition: transl;
+    width: 4rem;
+    transform: translate(-50%,-50%);
 }
-.legend-m>.text{
-    position: relative;
-    height: 1.25em;
-    overflow: hidden;
-    top: 2.25em;
-}
-.legend-m ul{
-    text-align: center;
-}
-.legend-m ul>li{
-    list-style: none;
-    display: inline-block;
-    width: 8em;
-}
-.legend-m ul>li>a{
-    color: #999;
-    display: block;
-}
-.legend-m ul>li>a:before{
-    content: "";
-    position: relative;
-    top: .125em;
-    display: inline-block;
-    margin-right: .5em;
-    width: 1em;
-    height: 1em;
-    border-radius: 50%;
-    background: radial-gradient(circle,#999,rgba(0,0,0,0))
-}
-.legend{
-    --color1:#00e673;
-    --color2:#ffec3d;
-    --color3:#b37feb;
-    --color4:#ff85c0;
-}
-.legend-m ul:first-of-type>li.active:nth-of-type(1)>a,
-.legend-m ul:first-of-type>li.active:nth-of-type(1)>a:before{
-    color: var(--color1);
-    background: radial-gradient(circle,var(--color1),rgba(0,0,0,0));
-}
-.legend-m ul:first-of-type>li.active:nth-of-type(2)>a,
-.legend-m ul:first-of-type>li.active:nth-of-type(2)>a:before{
-    color: var(--color2);
-    background: radial-gradient(circle,var(--color2),rgba(0,0,0,0));
-}
-.legend-m ul:first-of-type>li.active:nth-of-type(3)>a,
-.legend-m ul:first-of-type>li.active:nth-of-type(3)>a:before{
-    color: var(--color3);
-    background: radial-gradient(circle,var(--color3),rgba(0,0,0,0));
-}
-.legend-m ul:first-of-type>li.active:nth-of-type(4)>a,
-.legend-m ul:first-of-type>li.active:nth-of-type(4)>a:before{
-    color: var(--color4);
-    background: radial-gradient(circle,var(--color4),rgba(0,0,0,0));
-}
-.legend-m ul:first-of-type>li.active>a{
-    background: none!important;
-}
-.legend-b>.text{
-    position: relative;
-    text-align: center;
-    top: .625em;
-}
+
+
+
 
 
 
