Phm 链接，样式，Ulab大厅地图颜色分类

--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -57,22 +57,22 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td>研发调试：</td>
+                            <td>研发调试</td>
                             <td>3576</td>
-                            <td>——</td>
+                            <td>--</td>
                         </tr>
                         <tr>
-                            <td>新品认证：</td>
+                            <td>新品认证</td>
                             <td>3969</td>
                             <td>93.0%</td>
                         </tr>
                         <tr>
-                            <td>量产测试：</td>
+                            <td>量产测试</td>
                             <td>3734</td>
                             <td>96.7%</td>
                         </tr>
                         <tr>
-                            <td>监督抽查：</td>
+                            <td>监督抽查</td>
                             <td>383</td>
                             <td>100%</td>
                         </tr>
