--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -100,6 +100,7 @@ html,body{
     width: 100%;
     height: 85%;
     margin: 0 auto;
+    overflow: hidden;
 }
 #mainContent{
     width: 100%;
@@ -307,6 +308,7 @@ html,body{
 .rightMiddle>iframe{
     height: 100%;
     width: 100%;
+    transform: scale(1.2) translateY(10%);
 } 
 /* ======================================右侧 右边部分===================== */
 
