按实验室颜色分类

--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -96,7 +96,7 @@
                                 <label for="selectAll">全选</label>
                             </div>
                             <div class="text">
-                                <ul>
+                                <ul class="active">
                                     <li><a href>研发中心</a></li>
                                     <li><a href>检测中心</a></li>
                                     <li><a href>制造工厂</a></li>
@@ -208,9 +208,6 @@
 
 </div>
 <script src="${contextPath!}/static/js/hallMap.js"></script>
-<script>
-
-</script>
 
 </body>
 </html>
